# opengl-test

./: .gitattributes  CMakeLists.txt
res/shaders/basic/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  ShaderProgram.cpp  main.cpp  shaders.cpp
src/headers/: shaders.h
src/include/: ShaderProgram.hpp
